# projekt_tin

logowanie/: androidClient.cpp  androidClient.h  connection.cpp  connection.h  consts.cpp  consts.h  log.cpp  main.cpp  makefile  packet.cpp  packet.h  privkey.h  readWrite.h  sesskey.cpp  sesskey.h
msgReceiving/: ReadQueue.cpp  ReadQueue.h  common.h  main.cpp  makefile
msgSending/: AddQueue.cpp  AddQueue.h  common.h  main.cpp  makefile
queue/: AddQueue.cpp  AddQueue.h  RNG.cpp  RNG.h  ReadQueue.cpp  ReadQueue.h  consts.h  log.h  main.cpp  mainAdd.cpp  makefileReceiver  makefileSender  packet.cpp  packet.h  privkey.cpp  sesskey.cpp  sesskey.h
serwer/: AddQueue.cpp  AddQueue.h  CMakeLists.txt  DevDescriptor.cpp  DevDescriptor.h  ReadQueue.cpp  ReadQueue.h  androidClient.cpp  androidClient.h  androidSequentions.cpp  androidSequentions.h  connection.cpp  connection.h  consts.cpp  consts.h  log.cpp  logowaniemain.cpp  main.cpp  makefile  packet.cpp  packet.h  privkey.cpp  privkey.h  pubkey.cpp  pubkey.h  queuePacket.cpp  queuePacket.h  serwer.cpp  serwer.h  sesskey.cpp  sesskey.h
